Add more validation

--- a/kaggle_accent_archive.ipynb
+++ b/kaggle_accent_archive.ipynb
@@ -109,14 +109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = pd.DataFrame(columns=list(range(NUM_FEATURES)))\n",
     "y = pd.DataFrame(columns=[\"y\"])\n",
     "\n",
-    "dirs = [\"./recordings_wav/english\", \"./recordings_wav/spanish\", \"./recordings_wav/mandarin\"]\n",
+    "dirs = [\"./recordings_wav/english\", \"./recordings_wav/mandarin\"]\n",
     "\n",
     "for label, d in enumerate(dirs):\n",
     "    X = add_dir_to_df(d, X)\n",
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
        "array([1.])"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,6 +495,35 @@
    ],
    "source": [
     "clf.predict(pd.DataFrame([xiaobao], columns=X.columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xl = get_mfcc_from_filename('./recording_val/xueling.wav')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.])"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.predict(pd.DataFrame([xl], columns=X.columns))"
    ]
   },
   {
